:bug:fix: flex-wrap 추가

--- a/portfolio/assets/scss/style.scss
+++ b/portfolio/assets/scss/style.scss
@@ -180,6 +180,7 @@
         &--buttonbox {
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
             gap: 20px;
             margin-top: 30px;
 
